5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4056/executions/1578_1559.log
== SUBMITION (2019-03-27 19:23:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(MAIÚSCULAS))
-- EXECUTION TIME:
0.159352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper(MAI\xdaSCULAS))
NameError: name 'MAI\xdaSCULAS' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:24:04) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(MAIUSCULAS))
-- EXECUTION TIME:
0.141093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper(MAIUSCULAS))
NameError: name 'MAIUSCULAS' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:24:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(MAIUSCULAS))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.upper(MAIUSCULAS))
NameError: name 'MAIUSCULAS' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:24:14) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.21304
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7fba6c4414a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:24:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase.upper)
-- EXECUTION TIME:
0.132071
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("frase.upper)
                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:24:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase.upper")
-- EXECUTION TIME:
0.201603
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:24:55) 
-- CODE:
frase = "ada Lovelace foi a primeira programadora da historia."
print("frase.upper")

-- EXECUTION TIME:
0.171996
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:25:20) 
-- CODE:
frase = "ada Lovelace foi a primeira programadora da historia."
print(frase.upper)

-- EXECUTION TIME:
0.200299
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7eff8ad124a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:25:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)

-- OUTPUT:
<built-in method upper of str object at 0x7f15f08679f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:25:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(Ada Lovelace foi a primeira programadora da historia.))

-- EXECUTION TIME:
0.201176
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da historia.))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:26:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(maiuscula))

-- EXECUTION TIME:
0.172789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper(maiuscula))
NameError: name 'maiuscula' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:26:14) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(maiusculas))

-- EXECUTION TIME:
0.167684
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper(maiusculas))
NameError: name 'maiusculas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:27:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())

-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:27:31) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())

-- EXECUTION TIME:
0.132785
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
